--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
+		<java.version>17</java.version>
 	</properties>
 
 	<modules>
@@ -30,7 +30,7 @@
 			<plugin>
 				<groupId>net.revelc.code.formatter</groupId>
 				<artifactId>formatter-maven-plugin</artifactId>
-				<version>2.17.0</version>
+				<version>2.23.0</version>
 				<configuration>
 					<configFile>${project.basedir}/../formatter-config.xml</configFile>
 					<compilerSource>${java.version}</compilerSource>
@@ -45,17 +45,17 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.1</version>
+					<version>3.11.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-shade-plugin</artifactId>
-					<version>3.2.4</version>
+					<version>3.5.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.2</version>
+					<version>3.1.2</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -78,6 +78,10 @@
 			<id>jitpack-repo</id>
 			<url>https://jitpack.io</url>
 		</repository>
+		<repository>
+			<id>papermc</id>
+			<url>https://repo.papermc.io/repository/maven-public/</url>
+		</repository>
 	</repositories>
 
 	<dependencyManagement>
@@ -90,7 +94,7 @@
 			<dependency>
 				<groupId>com.google.dagger</groupId>
 				<artifactId>dagger</artifactId>
-				<version>2.40</version>
+				<version>2.45</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
@@ -100,13 +104,19 @@
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-text</artifactId>
-				<version>1.9</version>
+				<version>1.10.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.spigotmc</groupId>
 				<artifactId>spigot-api</artifactId>
-				<version>1.17-R0.1-SNAPSHOT</version>
+				<version>1.20.2-R0.1-SNAPSHOT</version>
 				<type>jar</type>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.papermc.paper</groupId>
+				<artifactId>paper-api</artifactId>
+				<version>1.20.2-R0.1-SNAPSHOT</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
@@ -118,7 +128,7 @@
 			<dependency>
 				<groupId>com.github.pyvesb</groupId>
 				<artifactId>petmaster</artifactId>
-				<version>1.12.4</version>
+				<version>1.12.5</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
@@ -130,37 +140,37 @@
 			<dependency>
 				<groupId>net.essentialsx</groupId>
 				<artifactId>EssentialsX</artifactId>
-				<version>2.19.0</version>
+				<version>2.20.1</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>me.clip</groupId>
 				<artifactId>placeholderapi</artifactId>
-				<version>2.10.10</version>
+				<version>2.11.5</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>42.3.1</version>
+				<version>42.5.3</version>
 			</dependency>
 			<dependency>
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
-				<version>1.4.200</version>
+				<version>2.1.214</version>
 			</dependency>
 
 			<!-- Test dependencies -->
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter</artifactId>
-				<version>5.8.1</version>
+				<version>5.10.0</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-junit-jupiter</artifactId>
-				<version>4.0.0</version>
+				<version>5.4.0</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
