prepared the project to support minimessage

--- a/advanced-achievements-api/pom.xml
+++ b/advanced-achievements-api/pom.xml
@@ -29,8 +29,8 @@
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.spigotmc</groupId>
-			<artifactId>spigot-api</artifactId>
+			<groupId>io.papermc.paper</groupId>
+			<artifactId>paper-api</artifactId>
 		</dependency>
 	</dependencies>
 </project>
